// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders base 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="php.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              PHP7
               
              <small />
            </span>
          </div>
          <div>
            Web technology
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card component renders optional subTitle 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="php.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              PHP7
               
              <small>
                Some web technology
              </small>
            </span>
          </div>
          <div>
            Web technology
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card component renders optional technologies 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="work_project.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="svg-wrapper"
          >
            <div
              class="svg-item"
            >
              <img
                class="svg-item__icon"
                currentitem="false"
                data-event="click mousestart mouseover"
                data-event-off="mouseout"
                data-for="technologyTip-PHP7"
                data-tip="true"
                src="img/svg/PHP7.svg"
              />
              <div
                class="__react_component_tooltip t5a3b6546-a650-4bd4-a421-94751f4b097f place-top type-dark"
                data-id="tooltip"
                id="technologyTip-PHP7"
              >
                <style
                  aria-hidden="true"
                >
                  
  	.t5a3b6546-a650-4bd4-a421-94751f4b097f {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
	    border-radius: undefinedpx;
	    padding: 8px 21px;
  	}

  	.t5a3b6546-a650-4bd4-a421-94751f4b097f.place-top {
        margin-top: -10px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-top::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-top::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(135deg);
    }

    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-bottom {
        margin-top: 10px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-bottom::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-bottom::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(45deg);
    }

    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-left {
        margin-left: -10px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-left::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-left::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        right: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(45deg);
    }

    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-right {
        margin-left: 10px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-right::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t5a3b6546-a650-4bd4-a421-94751f4b097f.place-right::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        left: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(-135deg);
    }
  
                </style>
                PHP7
              </div>
            </div>
            <div
              class="svg-item"
            >
              <img
                class="svg-item__icon"
                currentitem="false"
                data-event="click mousestart mouseover"
                data-event-off="mouseout"
                data-for="technologyTip-React"
                data-tip="true"
                src="img/svg/React.svg"
              />
              <div
                class="__react_component_tooltip t20cf2736-aa87-4765-8d0b-bc15daff616a place-top type-dark"
                data-id="tooltip"
                id="technologyTip-React"
              >
                <style
                  aria-hidden="true"
                >
                  
  	.t20cf2736-aa87-4765-8d0b-bc15daff616a {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
	    border-radius: undefinedpx;
	    padding: 8px 21px;
  	}

  	.t20cf2736-aa87-4765-8d0b-bc15daff616a.place-top {
        margin-top: -10px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-top::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-top::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(135deg);
    }

    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-bottom {
        margin-top: 10px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-bottom::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-bottom::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(45deg);
    }

    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-left {
        margin-left: -10px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-left::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-left::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        right: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(45deg);
    }

    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-right {
        margin-left: 10px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-right::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t20cf2736-aa87-4765-8d0b-bc15daff616a.place-right::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        left: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(-135deg);
    }
  
                </style>
                React
              </div>
            </div>
          </div>
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              Work Project
               
              <small />
            </span>
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;
